# CPP-Studio

./: CMakeLists.txt  README.md  main.cpp
AppDir/: .DirIcon  AppRun  CppStudio.desktop
AppDir/usr/lib/: libQt6DBus.so.6  libQt6Network.so.6  libQt6Svg.so.6  libQt6XcbQpa.so.6  libXau.so.6  libXdmcp.so.6  libatomic.so.1  libb2.so.1  libblkid.so.1  libbrotlicommon.so.1  libbrotlidec.so.1  libbz2.so.1.0  libcap.so.2  libcurl-gnutls.so.4  libdbus-1.so.3  libdouble-conversion.so.3  libduktape.so.207  libffi.so.8  libgio-2.0.so.0  libglib-2.0.so.0  libgmodule-2.0.so.0  libgnutls.so.30  libgobject-2.0.so.0  libgomp.so.1  libgraphite2.so.3  libgssapi_krb5.so.2  libhogweed.so.6  libicuuc.so.76  libidn2.so.0  libjpeg.so.62  libk5crypto.so.3  libkeyutils.so.1  libkrb5.so.3  libkrb5support.so.0  liblber.so.2  libldap.so.2  libmd4c.so.0  libmount.so.1  libnettle.so.8  libnghttp2.so.14  (+36 more)
AppDir/usr/share/applications/: CppStudio.desktop
AppDir/usr/share/doc/libcurl3t64-gnutls/: copyright
AppDir/usr/share/doc/libglib2.0-0t64/: copyright
AppDir/usr/share/doc/libgnutls30t64/: copyright
AppDir/usr/share/doc/libidn2-0/: copyright
AppDir/usr/share/doc/libldap2/: copyright
AppDir/usr/share/doc/libmd4c0/: copyright
AppDir/usr/share/doc/libnghttp3-9/: copyright
AppDir/usr/share/doc/libngtcp2-16/: copyright
AppDir/usr/share/doc/libopenjp2-7/: copyright
AppDir/usr/share/doc/libp11-kit0/: copyright
AppDir/usr/share/doc/libpng16-16t64/: copyright
AppDir/usr/share/doc/libqt6svg6/: copyright
AppDir/usr/share/doc/libssh2-1t64/: copyright
(+4 files in other folders)
